# mc-user-fastapi

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml
.github/workflows/: main.yml
app/: dependencies.py  main.py
app/api/: schemas.py
app/api/routes/: __init__.py  health.py  users.py
app/application/: exceptions.py
app/application/ports/: user_repository.py
app/application/use_cases/: create_user.py  delete_user.py  update_user.py
app/infrastructure/repositories/: in_memory_user_repository.py
deploy/helm/mc-user-fastapi/: Chart.yaml  values.yaml
deploy/helm/mc-user-fastapi/docs/: deploy.md
deploy/helm/mc-user-fastapi/templates/: _helpers.tpl  deployment.yaml  service.yaml
deploy/k8s/: README.md  deployment.yaml  namespace.yaml  service.yaml
deploy/k8s/docs/: README.md
tests/: conftest.py  test_health.py  test_users.py
