[project]
name = "mc-user-fastapi"
version = "0.1.0"
description = "Microservicio de usuarios en FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "uvicorn==0.35.0",
    "pydantic[email]==2.11.7",
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
]

[tool.poetry]
name = "mc-user-fastapi"
version = "0.1.0"
description = "Microservicio de usuarios en FastAPI"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "0.116.1"
httpx = "0.28.1"
uvicorn = "0.35.0"
pydantic = { version = "2.11.7", extras = ["email"] }

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
